...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.18">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_invitation"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnInvite"
            style="@style/btnTheme"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:text="Invite"

            app:layout_constraintBottom_toBottomOf="parent"
...
