...
            android:icon="@drawable/ic_roof"
          />
            />

        <item
            android:title="Invite"
            android:id="@+id/nav_tournament"
            android:icon="@drawable/ic_invitation"

            />
        <item
            android:title="Comments"
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_chat"

            />

        <item
            android:title="My Bookings"
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_mybooking"/>
        <item
            android:title="Profile"
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_person_24"

            />


</menu>
