...

    <Button
        android:id="@+id/btnConfirm"
        android:backgroundTint="#5DC305"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="Confirm"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:enabled="false"
        />


...
