...
                    android:layout_height="1dp"
                    android:background="#FAF8F8"
                    android:elevation="4dp"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="140dp"
                    android:layout_height="80dp"
                    android:backgroundTint="#FF0505"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="Delete"/>
...
