...
        android:background="#4BC1D0D8"
        android:padding="20dp"
        android:hint="Add your comment"
        android:id="@+id/etComment"/>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:text="Edit"/>

</LinearLayout>
