<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".fragments.match_fragments.BattleMatchFragment">

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/bg_search"
        android:hint="Search..."
        android:id="@+id/tvSearch"
        android:layout_marginBottom="4dp"
        android:drawableLeft="@drawable/ic_search"
        android:textSize="18sp"/>


    <TextView
        android:id="@+id/tvMatches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 matches"
        android:layout_gravity="end"
        android:textStyle="bold"
        android:layout_marginRight="4dp"
        android:textSize="17sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Add Battle"
        android:id="@+id/btnAdd"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/recycler"/>

</LinearLayout>