<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:gravity="center"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_login"
        android:padding="20dp"
        android:elevation="35dp"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="Login"
        android:layout_marginTop="20dp"
        android:textColor="#1A36DF"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Username"
        android:textColorHint="#534646"
        app:boxStrokeColor="#1A36DF"
        app:hintTextColor="#1A36DF"
        android:layout_marginTop="20dp"
      >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="Enter Password"
        android:textColorHint="#534646"
        app:boxStrokeColor="#1A36DF"
        app:hintTextColor="#1A36DF"
        app:passwordToggleEnabled="true">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="112dp" />
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:backgroundTint="#1A36DF"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="Login"


            />

    </LinearLayout>


</ScrollView>