...
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            />



        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_horizontal"
            app:itemIconTint="@color/icon_color"
            app:itemTextColor="@color/icon_color"

...
